# automata-hw2

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  test-requirements.txt
.github/scripts/: coverage.sh  release.sh
.github/workflows/: build.yml  codecov.yml  release.yml
benchmark/: .gitignore  negative.q  positive.q
doc/: Automata_HW2_2022-28022_report.tex
scripts/: common_functions.sh  compile.sh  generate_benchmark.py  generate_test.py  run_runner.sh  run_test.sh
src/: CMakeLists.txt  automata.hpp  fixedmap.hpp  main_run.cpp
test/: .gitignore  CMakeLists.txt  example.q
